Added prizes section

--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
                         </a>
                     </span>
                     <span class="navbar-item">
+                        <a class="button is-white is-outlined" href="#prizes">
+                            <span class="icon">
+                                <i class="fas fa-gift"></i>
+                            </span>
+                            <span>Prizes</span>
+                        </a>
+                    </span>
+                    <span class="navbar-item">
                         <a class="button is-white is-outlined" href="#sponsors">
                             <span class="icon">
                                 <i class="fa fa-link"></i>
@@ -80,15 +88,6 @@
                                 <i class="fa fa-address-book"></i>
                             </span>
                             <span>Contact</span>
-                        </a>
-                    </span>
-                    <span class="navbar-item">
-                        <a class="button is-warning is-white"
-                            href="https://carolinadatachallenge.typeform.com/to/vmVR4a">
-                            <span class="icon">
-                                <i class="fa fa-sign-in-alt"></i>
-                            </span>
-                            <span>Register</span>
                         </a>
                     </span>
                 </div>
@@ -109,14 +108,8 @@
                     <div class="column is-one-fifth"></div>
                     <div class="column">
                         <a class="button is-warning is-focused is-fullwidth"
-                            href="https://carolinadatachallenge.typeform.com/to/BDayXB">
-                            Register
-                        </a>
-                    </div>
-                    <div class="column">
-                        <a class="button is-warning is-focused is-fullwidth"
                             href="https://tinyurl.com/cdcunc-volunteer">
-                            Help Volunteer
+                            Volunteer
                         </a>
                     </div>
                     <div class="column is-one-fifth"></div>
@@ -130,7 +123,7 @@
             <div class="container">
                 <h1>
                     <b>
-                        Registration will close Wednesday, October 2nd!
+                        Registration has closed!
                     </b>
                 </h1>
             </div>
@@ -168,7 +161,7 @@
                     North Carolina at Chapel Hill.
                 </p>
                 <p class="is-size-4">
-                    Participants will have the opportunitiy to hack on a dataset from either the financial, technology
+                    Participants will have the opportunitiy to hack on a dataset from either the financial, technology,
                     or non-profit sector. At the end of the event, sponsors will present awards based on presentation
                     materials such as visualizations, predictive models, valuable insights, etc.
                 </p>
@@ -178,9 +171,10 @@
                     such as model building and visualization.
                 </p>
                 <p class="is-size-4">
-                    The event is completely free and meals are included! However, transportation is not available to the
-                    event this year, so participants must make their own travel arrangements. However, we are offering
-                    travel reimbursements.
+                    The event is completely free and meals are included! We are also offering
+                    <a href="https://forms.gle/ddANeCnUqxeo3MZs7" style="color: white">travel
+                        reimbursements</a> to participants traveling more than 60 miles to join us. Travel reimbursement
+                    requests are due Monday, September 30th.
                 </p>
 
                 <h1>
@@ -189,9 +183,7 @@
                     </b>
                 </h1>
                 <p class="is-size-4">
-                    Both undergraduate as well as master's students may participate in the event. There is also no
-                    restriction on which school participants attend. However, this year, we will not be able to provide
-                    transportation to UNC so students must make their own travel arrangements.
+                    We welcome both undergraduate and graduate students from any school.
                 </p>
             </div>
         </div>
@@ -203,7 +195,7 @@
                 <h3 style="text-align: center">Tentative Schedule</h3>
                 <div class="columns">
                     <div class="column is-10 is-offset-1">
-                        <h2 style="text-align: center"><b>Saturday October 5th</b></h2>
+                        <h2 style="text-align: center"><b>Saturday, October 5th</b></h2>
                         <table class="table">
                             <thead id="schedule_table">
                                 <tr>
@@ -238,7 +230,7 @@
                                         <p>Breakfast</p>
                                     </td>
                                     <td>
-                                        <p>Entreprenuer Lounge</p>
+                                        <p>Entrepreneurs' Lounge</p>
                                     </td>
                                 </tr>
                                 <tr>
@@ -293,7 +285,7 @@
                                         <p>Lunch</p>
                                     </td>
                                     <td>
-                                        <p>Entreprenuer Lounge</p>
+                                        <p>Entrepreneurs' Lounge</p>
                                     </td>
                                 </tr>
                                 <tr>
@@ -334,7 +326,7 @@
                                         <p>3:45PM</p>
                                     </td>
                                     <td>
-                                        <p>SAS - Visual Text Analyticss</p>
+                                        <p>SAS - Visual Text Analytics</p>
                                     </td>
                                     <td>
                                         <p>FB009</p>
@@ -356,7 +348,7 @@
                                         <p>5:35PM</p>
                                     </td>
                                     <td>
-                                        <p>Valassis - Modern Data Science in AdTech</p>
+                                        <p>Valassis - Data Science in the AdTech Industry</p>
                                     </td>
                                     <td>
                                         <p>FB009</p>
@@ -370,7 +362,7 @@
                                         <p>Dinner</p>
                                     </td>
                                     <td>
-                                        <p>Entreprenuer Lounge</p>
+                                        <p>Entrepreneurs' Lounge</p>
                                     </td>
                                 </tr>
                                 <tr>
@@ -378,7 +370,7 @@
                                         <p>8:30PM</p>
                                     </td>
                                     <td>
-                                        <p>Woman in Data Science Panel</p>
+                                        <p>Women in Data Science Panel</p>
                                     </td>
                                     <td>
                                         <p>FB007</p>
@@ -400,16 +392,16 @@
                                         <p>11:00PM</p>
                                     </td>
                                     <td>
-                                        <p>Sitterson Lobby</p>
+                                        <p>Spy & Board Games</p>
                                     </td>
                                     <td>
-                                        <p>FB008, FB009</p>
+                                        <p>SN014</p>
                                     </td>
                                 </tr>
                             </tbody>
                         </table>
 
-                        <h2 style="text-align: center"><b>Sunday October 6th</b></h2>
+                        <h2 style="text-align: center"><b>Sunday, October 6th</b></h2>
                         <table class="table">
                             <thead id="schedule_table">
                                 <tr>
@@ -433,7 +425,7 @@
                                         <p>Nighttime Noms</p>
                                     </td>
                                     <td>
-                                        <p>Entreprenuer Lounge</p>
+                                        <p>Entrepreneurs' Lounge</p>
                                     </td>
                                 </tr>
                                 <tr>
@@ -444,7 +436,7 @@
                                         <p>Breakfast</p>
                                     </td>
                                     <td>
-                                        <p>Entreprenuer Lounge</p>
+                                        <p>Entrepreneurs' Lounge</p>
                                     </td>
                                 </tr>
                                 <tr>
@@ -466,7 +458,7 @@
                                         <p>Lunch</p>
                                     </td>
                                     <td>
-                                        <p>Entreprenuer Lounge</p>
+                                        <p>Entrepreneurs' Lounge</p>
                                     </td>
                                 </tr>
                                 <tr>
@@ -535,7 +527,7 @@
                                 <p>Breakfast</p>
                             </td>
                             <td>
-                                <p>Entreprenuer Lounge</p>
+                                <p>Entrepreneurs' Lounge</p>
                             </td>
                         </tr>
                         <tr>
@@ -590,7 +582,7 @@
                                 <p>Lunch</p>
                             </td>
                             <td>
-                                <p>Entreprenuer Lounge</p>
+                                <p>Entrepreneurs' Lounge</p>
                             </td>
                         </tr>
                         <tr>
@@ -631,7 +623,7 @@
                                 <p>3:45PM</p>
                             </td>
                             <td>
-                                <p>SAS - Visual Text Analyticss</p>
+                                <p>SAS - Visual Text Analytics</p>
                             </td>
                             <td>
                                 <p>FB009</p>
@@ -667,7 +659,7 @@
                                 <p>Dinner</p>
                             </td>
                             <td>
-                                <p>Entreprenuer Lounge</p>
+                                <p>Entrepreneurs' Lounge</p>
                             </td>
                         </tr>
                         <tr>
@@ -675,7 +667,7 @@
                                 <p>8:30PM</p>
                             </td>
                             <td>
-                                <p>Woman in Data Science Panel</p>
+                                <p>Women in Data Science Panel</p>
                             </td>
                             <td>
                                 <p>FB007</p>
@@ -729,7 +721,7 @@
                                 <p>Nighttime Noms</p>
                             </td>
                             <td>
-                                <p>Entreprenuer Lounge</p>
+                                <p>Entrepreneurs' Lounge</p>
                             </td>
                         </tr>
                         <tr>
@@ -740,7 +732,7 @@
                                 <p>Breakfast</p>
                             </td>
                             <td>
-                                <p>Entreprenuer Lounge</p>
+                                <p>Entrepreneurs' Lounge</p>
                             </td>
                         </tr>
                         <tr>
@@ -762,7 +754,7 @@
                                 <p>Lunch</p>
                             </td>
                             <td>
-                                <p>Entreprenuer Lounge</p>
+                                <p>Entrepreneurs' Lounge</p>
                             </td>
                         </tr>
                         <tr>
@@ -791,6 +783,49 @@
                 </table>
             </div>
         </div> -->
+    </section>
+
+    <section class="hero is-medium is-light is-bold" id="prizes">
+        <div class="hero-body">
+            <div class="container">
+                <div class="columns is-centered is-vcentered">
+                    <h1>
+                        <b>
+                            Prizes Per Category
+                        </b>
+                    </h1>
+                </div>
+                <div class= "columns">
+                    <br>
+                </div>
+                <div class="columns is-centered">
+                    <div class="column is-one-quarter has-text-centered">
+                        <h2><b>Beginner</b></h2>
+                        <h2>$100 Gift Card</h2>
+                        <h4>Sponsored by Valassis Digital</h4>
+                    </div>
+                    <div class="column is-one-quarter has-text-centered">
+                        <h2><b>Insight</b></h2>
+                        <h2>JBL Speaker</h2>
+                        <h2>Water Bottle</h2>
+                        <h2>$25 Gift Card</h2>
+                        <h4>Sponsored by Barings</h4>
+                    </div>
+                    <div class="column is-one-quarter has-text-centered">
+                        <h2><b>Outside Data</b></h2>
+                        <h2>2 AirPods</h2>
+                        <h2>2 Bose Speakers</h2>
+                        <h2>Go Pro</h2>
+                        <h4>Sponsored by EY</h4>
+                    </div>
+                    <div class="column is-one-quarter has-text-centered">
+                        <h2><b>Visualization</b></h2>
+                        <h2>$100 Gift Card</h2>
+                        <h4>Sponsored by CapTech</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section id="winners">
