Fixed text formatting and missing sponsors

--- a/index (2).html
+++ b/index (2).html
@@ -13,8 +13,10 @@
 <link rel="stylesheet" href="./css/mystyles.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+<!-- Material Design Bootstrap -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
 <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-
 <!-- JQuery -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <!-- Bootstrap tooltips -->
@@ -24,6 +26,8 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <!-- MDB core JavaScript -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
+
+
 </head>
 
 <body>
@@ -115,9 +119,8 @@
                 <div class="columns has-text-centered">
                     <div class="column is-one-fifth"></div>
                     <div class="column">
-                        <a class="button is-warning is-focused is-fullwidth"
-                            href="https://tinyurl.com/cdcunc-volunteer">
-                            Volunteer
+                        <a class="button is-warning is-focused is-fullwidth" href="http://tinyurl.com/2020CDCDirectors">
+                            Director Applications
                         </a>
                     </div>
                     <div class="column is-one-fifth"></div>
@@ -126,7 +129,17 @@
         </div>
         </div>
     </section>
-
+    <section class="hero is-danger">
+        <div class="hero-body">
+            <div class="container">
+                <h1>
+                    <b>
+                        Thank you for our largest turnout yet!
+                    </b>
+                </h1>
+            </div>
+        </div>
+    </section>
     <section class="hero is-medium is-primary is-bold" id="info">
         <div class="hero-body">
             <div class="container">
@@ -302,7 +315,7 @@
                                         <p>1:55PM</p>
                                     </td>
                                     <td>
-                                        <p>Barings - Data Science Applied to Finance</p>
+                                        <p>Barings - NLP Techniques to Process Quora Data</p>
                                     </td>
                                     <td>
                                         <p>FB009</p>
@@ -487,300 +500,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="hero-body">
-            <div class="container">
-                <h2>Tentative Schedule</h2>
-                <h3><b>Saturday October 5th</b></h3>
-                <table>
-                    <thead>
-                        <tr>
-                            <th class="table-header-25">
-                                <h4>Time</h4>
-                            </th>
-                            <th class="table-header-50">
-                                <h4>Activity</h4>
-                            </th>
-                            <th class="table-header-25">
-                                <h4>Location</h4>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                <p>8:00AM - 9:45AM</p>
-                            </td>
-                            <td>
-                                <p>Registration</p>
-                            </td>
-                            <td>
-                                <p>Sitterson Lobby</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>8:00AM - 9:45AM</p>
-                            </td>
-                            <td>
-                                <p>Breakfast</p>
-                            </td>
-                            <td>
-                                <p>Entrepreneurs' Lounge</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>10:00AM - 10:45AM</p>
-                            </td>
-                            <td>
-                                <p>Opening Ceremony</p>
-                            </td>
-                            <td>
-                                <p>Chapman</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>11:00AM</p>
-                            </td>
-                            <td>
-                                <p>Hacking Begins</p>
-                            </td>
-                            <td>
-                                <p></p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>11:00AM - 11:30AM</p>
-                            </td>
-                            <td>
-                                <p>Team Matching</p>
-                            </td>
-                            <td>
-                                <p>SN014</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>11:00AM - 1:00PM</p>
-                            </td>
-                            <td>
-                                <p>Sponsorship Fair</p>
-                            </td>
-                            <td>
-                                <p>Sitterson Lobby</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>12:00PM - 2:00PM</p>
-                            </td>
-                            <td>
-                                <p>Lunch</p>
-                            </td>
-                            <td>
-                                <p>Entrepreneurs' Lounge</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>1:00PM</p>
-                            </td>
-                            <td>
-                                <p>CapTech - Tableau Data Visualization</p>
-                            </td>
-                            <td>
-                                <p>FB009</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>1:55PM</p>
-                            </td>
-                            <td>
-                                <p>Barings - Data Science Applied to Finance</p>
-                            </td>
-                            <td>
-                                <p>FB009</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>2:50PM</p>
-                            </td>
-                            <td>
-                                <p>EY - Business Analytics -> Data Science to Stakeholders</p>
-                            </td>
-                            <td>
-                                <p>FB009</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>3:45PM</p>
-                            </td>
-                            <td>
-                                <p>SAS - Visual Text Analytics</p>
-                            </td>
-                            <td>
-                                <p>FB009</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>4:40PM</p>
-                            </td>
-                            <td>
-                                <p>NCSU IAA - Machine Learning</p>
-                            </td>
-                            <td>
-                                <p>FB009</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>5:35PM</p>
-                            </td>
-                            <td>
-                                <p>Valassis - Modern Data Science in AdTech</p>
-                            </td>
-                            <td>
-                                <p>FB009</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>6:30PM - 8:30PM</p>
-                            </td>
-                            <td>
-                                <p>Dinner</p>
-                            </td>
-                            <td>
-                                <p>Entrepreneurs' Lounge</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>8:30PM</p>
-                            </td>
-                            <td>
-                                <p>Women in Data Science Panel</p>
-                            </td>
-                            <td>
-                                <p>FB007</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>10:00PM</p>
-                            </td>
-                            <td>
-                                <p>Sleeping Rooms Open</p>
-                            </td>
-                            <td>
-                                <p>FB008, FB009</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>11:00PM</p>
-                            </td>
-                            <td>
-                                <p>Sitterson Lobby</p>
-                            </td>
-                            <td>
-                                <p>FB008, FB009</p>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-                <h3><b>Sunday October 6th</b></h3>
-                <table>
-                    <thead>
-                        <tr>
-                            <th class="table-header-25">
-                                <h4>Time</h4>
-                            </th>
-                            <th class="table-header-50">
-                                <h4>Activity</h4>
-                            </th>
-                            <th class="table-header-25">
-                                <h4>Location</h4>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                <p>12:00AM - 1:00AM</p>
-                            </td>
-                            <td>
-                                <p>Nighttime Noms</p>
-                            </td>
-                            <td>
-                                <p>Entrepreneurs' Lounge</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>7:00AM - 9:00AM</p>
-                            </td>
-                            <td>
-                                <p>Breakfast</p>
-                            </td>
-                            <td>
-                                <p>Entrepreneurs' Lounge</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>11:00AM</p>
-                            </td>
-                            <td>
-                                <p>Hacking Ends / Project Submission Deadline</p>
-                            </td>
-                            <td>
-                                <p></p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>11:00AM - 2:00PM</p>
-                            </td>
-                            <td>
-                                <p>Lunch</p>
-                            </td>
-                            <td>
-                                <p>Entrepreneurs' Lounge</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>12:00PM - 2:00PM</p>
-                            </td>
-                            <td>
-                                <p>Demo Fair</p>
-                            </td>
-                            <td>
-                                <p>Sitterson Lobby</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>3:00PM - 4:00PM</p>
-                            </td>
-                            <td>
-                                <p>Closing Ceremony</p>
-                            </td>
-                            <td>
-                                <p>Chapman</p>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div> -->
     </section>
 
     <section class="hero is-medium is-light is-bold" id="prizes">
@@ -1043,31 +762,36 @@
                 </div>
             </div>
             <div class="columns is-centered is-vcentered">
-                <div class="column is-one-quarter has-text-centered">
-                    <img src="img/barings2.png">
+                <div class="column has-text-centered is-3">
+                    <img class="sponsor-logo" src="img/barings2.png">
                 </div>
-                <div class="column is-one-quarter has-text-centered">
-                    <img src="img/ey2.png" width="120">
+                <div class="column has-text-centered is-3">
+                    <img class="sponsor-logo" src="img/ey2.png" width="120">
                 </div>
-                <div class="column is-one-quarter has-text-centered">
-                    <img src="img/fidelity.png">
-                </div>
-                <div class="column is-one-quarter has-text-centered">
-                    <img src="img/iaa.svg">
+                <div class="column has-text-centered is-3">
+                    <img class="sponsor-logo" src="img/fidelity.png">
                 </div>
             </div>
             <div class="columns is-centered is-vcentered">
-                <div class="column is-one-quarter has-text-centered">
-                    <img src="img/sas.png">
+                <div class="column has-text-centered is-3">
+                    <img class="sponsor-logo" src="img/iaa.svg">
                 </div>
-                <div class="column is-one-quarter has-text-centered">
-                    <img src="img/renci.png" width="120">
+                <div class="column has-text-centered is-3">
+                    <img class="sponsor-logo" src="img/sas.png">
                 </div>
-                <div class="column is-one-quarter has-text-centered">
-                    <img src="img/ncds.jpg">
+                <div class="column has-text-centered is-3">
+                    <img class="sponsor-logo" src="img/renci.png" width="120">
                 </div>
-                <div class="column is-one-quarter has-text-centered">
-                    <img src="img/unc-cs.png">
+            </div>
+            <div class="columns is-centered is-vcentered">
+                <div class="column has-text-centered is-3">
+                    <img class="sponsor-logo" src="img/ncds.jpg">
+                </div>
+                <div class="column has-text-centered is-3">
+                    <img class="sponsor-logo" src="img/unc-cs.png">
+                </div>
+                <div class="column has-text-centered is-3">
+                    <img class="sponsor-logo" src="img/valassis.png">
                 </div>
             </div>
         </div>
